2012-11-12         Arnold D. Robbins     <arnold@skeeve.com>

	* symtab6.ok: Remove PROCINFO.
	* Makefile.am (symtab6): Adjust recipe.

2012-11-10         Arnold D. Robbins     <arnold@skeeve.com>

	* symtab4.awk, symtab4.in, symtab4.ok, symtab5.awk, symtab5.in,
	symtab5.ok, symtab6.awk: New files.
	* Makefile.am (EXTRA_DIST): Add new files.
	(symtab4, symtab5, symtab6): New tests.
	Thanks to Assaf Gordon <gordon@cshl.edu>.

2012-10-28         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* messages.awk, fts.awk: Adjusted so make diffout will work.
	* Makefile.am (messages): Adjust to use standard failure test for
	make diffout.

2012-10-19         Arnold D. Robbins     <arnold@skeeve.com>

	* symtab1.awk: Adjust to not print ENVIRON and PROCINFO which won't
	be the same as on the author's machine.
	* lintwarn.ok: Adjust.

2012-10-13         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): Add jarebug.sh.

2012-10-11         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (readdir): Use $(top_srcdir) instead of `.'. Helps
	when running the valgrind tests.

2012-10-11         Arnold D. Robbins     <arnold@skeeve.com>

	* testext.ok: Updated.

2012-10-04         Akim Demaille         <akim@lrde.epita.fr>

	Fix VPATH builds.

	* Makefile.am (shlib-tests): config.h is in builddir.
	(beginfile2): So is gawk itself.

	* Makefile.am (functab1, functab2, functab3, functab4, id, symtab1,
	symtab2, symtab3): New tests.
	* functab1.awk, functab1.ok, functab2.awk, functab2.ok, functab3.awk,
	functab3.ok, functab4.awk, functab4.ok, id.awk, id.ok, symtab1.awk,
	symtab1.ok, symtab2.awk, symtab2.ok, symtab3.awk, symtab3.ok:
	New files.

2012-09-23         Arnold D. Robbins     <arnold@skeeve.com>

	* lintwarn.ok: Updated.

2012-09-14         Arnold D. Robbins     <arnold@skeeve.com>

	* testext.ok: Updated. Twice.

2012-09-11         Arnold D. Robbins     <arnold@skeeve.com>
