@@ -1,3 +1,7 @@
+2012-11-13         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (GAWK_EXTRA_TESTS): Move to sorted order of tests.
+
 2012-11-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* symtab6.ok: Remove PROCINFO.
